<resources>
    <string name="app_name">YardSale</string>
    <string name="yard_get_into">Get into</string>
    <string name="yard_email_address">Email address</string>
    <string name="yard_sale_logo_main">Yard sale Logo main</string>
    <string name="yard_password">Password</string>
    <string name="yard_log_in">Log in</string>
    <string name="yard_forgot_my_password">Forgot my password</string>
    <string name="yard_sign_up">Sign Up</string>
    <string name="yard_password_recovery">Password Recovery</string>
    <string name="yard_description_password_recovery">Inform the email address used to create your account</string>
    <string name="yard_submit">Submit</string>
    <string name="yard_back_to_log_in">Back to log in</string>
    <string name="yard_email_has_been_sent">Email has been sent</string>
    <string name="yard_please_check_your_inbox_for_instructions_on_how_to_reset_the_password">Please check your inbox for instructions on how to reset the password</string>
    <string name="yard_didn_t_receive_the_email_resend">Didn’t receive the email? Resend</string>
    <string name="yard_create_a_new_password">Create a new password</string>
    <string name="yard_enter_a_new_password_for_your_account">Enter a new password for your account</string>
    <string name="yard_confirm">Confirm</string>
    <string name="my_account">My Account</string>
    <string name="yard_nicolas_cabezas">Nicolas Cabezas</string>
    <string name="yard_name">Name</string>
    <string name="yard_create">Create</string>
</resources>