<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="18dp"
    tools:context=".models.RecoveryPasswordActivity">

    <ImageView
        android:id="@+id/imageViewYardSaleLogo"
        style="@style/yard_ic_big_logo_yard_sale"
        android:layout_marginTop="108dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textViewPassword"
        style="@style/yard_text_title"
        android:layout_marginTop="74dp"
        android:text="@string/yard_password_recovery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewYardSaleLogo" />

    <TextView
        android:id="@+id/textViewInformPassword"
        style="@style/yard_text_subtitle"
        android:layout_marginTop="108dp"
        android:text="@string/yard_description_password_recovery"
        android:textAlignment="center"
        android:textColor="@color/yard_very_light_pink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewYardSaleLogo"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textViewEmail"
        style="@style/yard_text_sub_header"
        android:layout_marginTop="34dp"
        android:text="@string/yard_email_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewInformPassword"
        tools:ignore="TextSizeCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEmail"
        style="@style/yard_text_input_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditEmail"
            style="@style/yard_email_text_input_edit_text"
            android:textColorHint="#546E7A"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSubmit"
        style="@style/yard_main_button"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/yard_hospital_green"
        android:text="@string/yard_submit"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutEmail"
        tools:ignore="VisualLintButtonSize,TextContrastCheck" />

    <TextView
        android:id="@+id/textViewBackLogin"
        style="@style/yard_link_text"
        android:layout_marginTop="24dp"
        android:text="@string/yard_back_to_log_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonSubmit"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>