<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="18dp"
    tools:context=".models.RecoveryPasswordActivity">

    <ImageView
        android:id="@+id/imageViewYardSaleLogo"
        style="@style/yard_ic_big_logo_yard_sale"
        android:layout_marginTop="108dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textViewEmailSend"
        style="@style/yard_text_title"
        android:layout_marginTop="74dp"
        android:text="@string/yard_email_has_been_sent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewYardSaleLogo" />

    <TextView
        android:id="@+id/textViewInformPassword"
        style="@style/yard_text_subtitle"
        android:layout_marginTop="108dp"
        android:text="@string/yard_please_check_your_inbox_for_instructions_on_how_to_reset_the_password"
        android:textAlignment="center"
        android:textColor="@color/yard_very_light_pink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewYardSaleLogo"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/ImageViewEmailLogo"
        style="@style/yard_mail_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewInformPassword"
        tools:ignore="ContentDescription,ImageContrastCheck" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSubmit"
        style="@style/yard_main_button"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/yard_hospital_green"
        android:text="@string/yard_log_in"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ImageViewEmailLogo"
        tools:ignore="VisualLintButtonSize,TextContrastCheck" />

    <TextView
        android:id="@+id/textViewResendEmail"
        style="@style/yard_link_text"
        android:layout_marginTop="24dp"
        android:text="@string/yard_didn_t_receive_the_email_resend"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonSubmit"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>