<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="18dp"
    tools:context=".models.RecoveryPasswordActivity">

    <ImageView
        android:id="@+id/imageViewYardSaleLogo"
        style="@style/yard_ic_big_logo_yard_sale"
        android:layout_marginTop="108dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textViewPassword"
        style="@style/yard_text_title"
        android:layout_marginTop="74dp"
        android:text="@string/yard_create_a_new_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewYardSaleLogo" />

    <TextView
        android:id="@+id/textViewInformPassword"
        style="@style/yard_text_subtitle"
        android:layout_marginTop="108dp"
        android:text="@string/yard_enter_a_new_password_for_your_account"
        android:textAlignment="center"
        android:textColor="@color/yard_very_light_pink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewYardSaleLogo"
        tools:ignore="TextContrastCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPassword"
        style="@style/yard_password_text_input_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="64dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewPassword">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditPassword"
            style="@style/yard_password_text_input_edit_text"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize,DuplicateSpeakableTextCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutNewPassword"
        style="@style/yard_password_new_text_input_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutPassword">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditNewPassword"
            style="@style/yard_password_new_text_input_edit_text"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonConfirm"
        style="@style/yard_main_button"
        android:layout_marginTop="48dp"
        android:backgroundTint="@color/yard_hospital_green"
        android:text="@string/yard_confirm"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutNewPassword"
        tools:ignore="VisualLintButtonSize,TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>